feat(history): add get employee history use case
