# backend/src/main/java/com/parkmanshift/backend/infrastructure/persistence/ParkingPersistenceAdapter.java
@@ -75,9 +75,24 @@ public class ParkingPersistenceAdapter implements ParkingSpotRepositoryPort, Res
     }
 
     @Override
+    public List<Reservation> findByEmployeeId(String employeeId) {
+        return reservationRepository.findByEmployeeId(employeeId).stream()
+                .map(this::toDomain)
+                .collect(Collectors.toList());
+    }
+
+    @Override
     public List<Reservation> findByEmployeeIdAndStatusIn(String employeeId, List<ReservationStatus> statuses) {
         List<String> statusStrings = statuses.stream().map(Enum::name).collect(Collectors.toList());
         return reservationRepository.findByEmployeeIdAndStatusIn(employeeId, statusStrings).stream()
+                .map(this::toDomain)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<Reservation> findByEmployeeIdAndDateGreaterThanEqualAndStatusIn(String employeeId, LocalDate date, List<ReservationStatus> statuses) {
+        List<String> statusStrings = statuses.stream().map(Enum::name).collect(Collectors.toList());
+        return reservationRepository.findByEmployeeIdAndReservationDateGreaterThanEqualAndStatusIn(employeeId, date, statusStrings).stream()
                 .map(this::toDomain)
                 .collect(Collectors.toList());
     }
