# backend/src/main/java/com/parkmanshift/backend/infrastructure/persistence/SpringDataReservationRepository.java
@@ -9,6 +9,8 @@ import java.util.UUID;
 @Repository
 public interface SpringDataReservationRepository extends JpaRepository<ReservationEntity, UUID> {
     List<ReservationEntity> findByReservationDate(LocalDate reservationDate);
+    List<ReservationEntity> findByEmployeeId(String employeeId);
     List<ReservationEntity> findByEmployeeIdAndStatusIn(String employeeId, List<String> statuses);
+    List<ReservationEntity> findByEmployeeIdAndReservationDateGreaterThanEqualAndStatusIn(String employeeId, LocalDate date, List<String> statuses);
     List<ReservationEntity> findByParkingSpotLabelAndReservationDateAndStatusIn(String parkingSpotLabel, LocalDate reservationDate, List<String> statuses);
 }
